--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=9897
 
-spring.datasource.url=jdbc:mysql://localhost:3306/web_facturacion?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/web_facturacion?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 
-#spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10378811?serverTimezone=UTC
-#spring.datasource.username=sql10378811
-#spring.datasource.password=JhgfFNF5WX
+spring.datasource.url=jdbc:mysql://lolotzmdapals1xg:v3c4z2iclz20vimm@jtb9ia3h1pgevwb1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/e7bevb225rhet7i6
+spring.datasource.username=lolotzmdapals1xg
+spring.datasource.password=v3c4z2iclz20vimm 
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
