--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9897
 #spring.datasource.username=root
 #spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://lolotzmdapals1xg:v3c4z2iclz20vimm@jtb9ia3h1pgevwb1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/e7bevb225rhet7i6
+spring.datasource.url=mysql://lolotzmdapals1xg:v3c4z2iclz20vimm@jtb9ia3h1pgevwb1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/e7bevb225rhet7i6
 spring.datasource.username=lolotzmdapals1xg
 spring.datasource.password=v3c4z2iclz20vimm 
 
